// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WithModal/> as HOC render with default/required props 1`] = `
<Fragment>
  <Component
    data-cy="should be passed \\"as is\\""
    history={
      Object {
        "goBack": [MockFunction],
      }
    }
  />
</Fragment>
`;

exports[`<WithModal/> as HOC render with location.state.isModal as true 1`] = `
<Fragment>
  <Component
    data-cy="should be passed \\"as is\\""
    history={
      Object {
        "goBack": [MockFunction],
      }
    }
  />
  <_default
    className="modal--fullscreen"
    onClose={[MockFunction]}
  >
    <Switch>
      <Route
        component={[Function]}
        data-cy="should be passed \\"as is\\""
        history={
          Object {
            "goBack": [MockFunction],
          }
        }
        key="0"
        path={
          Array [
            "/explore/:id",
          ]
        }
      />
    </Switch>
  </_default>
</Fragment>
`;
